<resources>
    <string name="app_name">PDF Reader Pro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_title_1">Explore PDFs Seamlessly</string>
    <string name="intro_sub_title_1">Dive into the world of PDFs with effortless reading</string>
    <string name="intro_title_2">Your PDF Collection</string>
    <string name="intro_sub_title_2">Efficiently locate and access any PDF you want</string>
    <string name="intro_title_3">Tailor Your PDF Experience</string>
    <string name="intro_sub_title_3">Customize, search, and explore advanced PDF features.</string>
    <string name="greeting_with_emoji">%1$s %2$s</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="permission_normal_title">Let’s Get those PDFs</string>
    <string name="permission_allowed_title">We\'re all set</string>
    <string name="permission_error_title">Some Error Occurred</string>
    <string name="permission_normal_sub_title">Allow storage access, and we will allow you to access, search and filter as you want and many more.</string>
    <string name="permission_allowed_sub_title">Let’s Jump into the app</string>
    <string name="permission_error_sub_title">We couldn\'t get the permission properly. May be something went wrong.</string>
    <string name="permission_below_11_normal_description">Please click Allow button in the next dialog.</string>
    <string name="permission_above_11_normal_description">Please turn on the Switch in the next Page</string>
    <string name="permission_error_description">Please turn on the Switch in the next Page</string>
    <string name="allow_access">Allow Access</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="try_again">Try Again</string>
    <string name="app_settings">App Settings</string>
    <string name="how_to_allow_access">How To Allow Access</string>
    <string name="settings">Settings</string>
    <string name="search_pdf">Search PDF</string>
    <string name="overview">PDF Overview</string>
    <string name="no_file_image">No File Image</string>
    <string name="sorry_no_file">Sorry! We couldn’t find any PDF in your device.</string>
    <string name="option_menu">Option Menu</string>
    <string name="files">Files</string>
    <string name="folders">Folders</string>
    <string name="sort_by">Sort By</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_recent">Remove from Recent</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete_this_file">Do you want to Delete this file?</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="size_t">Size:</string>
    <string name="last_modified_t">Last Modified:</string>
    <string name="pages_t">Pages:</string>
    <string name="path_t">Path:</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="total_size">Total Size</string>
    <string name="no_pdf_found_by_that_name">No PDF found by that name</string>
    <string name="back_press">BackPress</string>
    <string name="rotate">Rotate</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="brightness">Brightness</string>
    <string name="jump_to_page">Jump to Page</string>
    <string name="scroll_orient">Scroll Orientation</string>
    <string name="jump">Jump</string>
    <string name="enter_page_number">Enter Page Number</string>
    <string name="remove">Remove</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="open">Open</string>
    <string name="open_with">Open With</string>
    <string name="open_in_app">Open in App</string>
    <string name="clear_all">Clear All</string>
    <string name="show_all">Show All</string>
    <string name="show_less">Show Less</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="merge">Merge</string>
    <string name="download">Download</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="continue_text">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="preview">Preview</string>
    <string name="change_file">Change File</string>
    <string name="add_files">Add Files</string>
    <string name="select_file">Select File</string>
    <string name="select_pdf">Select PDF</string>
    <string name="select_images">Select Images</string>
    <string name="sort_files">Sort Files</string>
    <string name="sort_folders">Sort Folders</string>
    <string name="choose_sort_pdfs">Choose how to organize your PDFs</string>
    <string name="choose_sort_folders">Choose how to organize folders</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort_by_date">By Date</string>
    <string name="sort_by_size">By Size</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="welcome_to_library">Welcome to your PDF library</string>
    <string name="all_files">All Files</string>
    <string name="favorites">Favorites</string>
    <string name="recent">Recent</string>
    <string name="no_files">No files</string>
    <string name="no_favorites">No favorites yet</string>
    <string name="no_recent">No recent files</string>
    <string name="add_favorites_hint">Add PDFs to favorites to see them here</string>
    <string name="open_pdf_hint">Open some PDFs to see them here</string>
    <string name="delete_warning">This action cannot be undone. The files will be permanently deleted from your device.</string>
    <string name="all_folders">All Folders</string>
    <string name="search_folders">Search folders…</string>
    <string name="search_folders_hint">Search folders...</string>
    <string name="no_folders_found">No folders found</string>
    <string name="try_different_search">Try a different search term</string>
    <string name="folder_count">%d folders</string>
    <string name="file_count">%d files</string>
    <string name="pdfs">PDFs</string>
    <string name="search_folders_desc">Search folders</string>
    <string name="sort_folders_desc">Sort folders</string>
    <string name="clear_search">Clear search</string>
    <string name="close_search">Close search</string>
    <string name="search_your_pdfs">Search your PDFs…</string>
    <string name="search_your_pdfs_hint">Search your PDFs...</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="search_tips">Search Tips</string>
    <string name="results_for">Results for \"%s\"</string>
    <string name="no_results">No results found</string>
    <string name="clear">Clear</string>
    <string name="show_all_count">Show All (%d)</string>
    <string name="file_found">%d file found</string>
    <string name="files_found">%d files found</string>
    <string name="options">Options</string>
    <string name="tip_search_filename_title">Search by filename</string>
    <string name="tip_search_filename_desc">Type part of the PDF name to find it quickly</string>
    <string name="tip_search_folder_title">Search by folder</string>
    <string name="tip_search_folder_desc">Enter a folder name to find all PDFs in it</string>
    <string name="tip_partial_matches_title">Partial matches work</string>
    <string name="tip_partial_matches_desc">You don\'t need the exact name - try shorter words</string>
    <string name="file_information">File Information</string>
    <string name="file_name">File Name</string>
    <string name="file_path">File Path</string>
    <string name="file_size">File Size</string>
    <string name="page_count">Page Count</string>
    <string name="last_modified">Last Modified</string>
    <string name="created">Created</string>
    <string name="delete_file">Delete File</string>
    <string name="delete_files">Delete Files</string>
    <string name="action_cannot_be_undone">This action cannot be undone</string>
    <string name="confirm_delete_file">Are you sure you want to permanently delete this file?</string>
    <string name="confirm_delete_files">Are you sure you want to permanently delete these files?</string>
    <string name="rename_file">Rename File</string>
    <string name="new_name">New Name</string>
    <string name="library_statistics">Library Statistics</string>
    <string name="total_files">Total Files</string>
    <string name="favorite_files">Favorite Files</string>
    <string name="recent_files">Recent Files</string>
    <string name="appearance">Appearance</string>
    <string name="reader">Reader</string>
    <string name="updates">Updates</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System</string>
    <string name="dynamic_colors">Dynamic Colors</string>
    <string name="scroll_direction">Scroll Direction</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="page_layout">Page Layout</string>
    <string name="single_page">Single Page</string>
    <string name="two_pages">Two Pages</string>
    <string name="page_alignment">Page Alignment</string>
    <string name="align_left">Left</string>
    <string name="align_center">Center</string>
    <string name="align_right">Right</string>
    <string name="quick_zoom">Quick Zoom</string>
    <string name="fit_width">Fit Width</string>
    <string name="fit_page">Fit Page</string>
    <string name="actual_size">Actual Size</string>
    <string name="reading_theme">Reading Theme</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="auto_check_updates">Auto Check Updates</string>
    <string name="version">Version %s</string>
    <string name="gpl_license">GPL 3.0</string>
    <string name="adjust_brightness">Adjust screen brightness</string>
    <string name="changelog">Changelog</string>
    <string name="latest">LATEST</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="your_privacy_protected">Your Privacy is Protected</string>
    <string name="last_updated">Last updated: %s</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="about_creator">About the Creator</string>
    <string name="creator_name">K M Rejowan Ahmmed</string>
    <string name="creator_title">Senior Android Developer</string>
    <string name="creator_description">PDF Reader Pro was created to provide a free, open-source, and privacy-focused PDF reading experience. With features like bookmarks, favorites, reading themes, and customizable settings, it aims to be a complete PDF solution for Android users.</string>
    <string name="gnu_license">GNU General Public License v3.0</string>
    <string name="tool_category_organize">Organize</string>
    <string name="tool_category_edit">Edit</string>
    <string name="tool_category_security">Security</string>
    <string name="tool_category_convert">Convert</string>
    <string name="tool_split_pdf">Split PDF</string>
    <string name="tool_split_desc">Split a PDF into multiple files</string>
</resources>