<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sort_by"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/textGrey" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textColor="@color/textColor"
        android:textSize="16sp" />



    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/date"
        android:textColor="@color/textColor"
        android:textSize="16sp" />



    <TextView
        android:id="@+id/tv_size"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/size"
        android:textColor="@color/textColor"
        android:textSize="16sp" />


</LinearLayout>