<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PermissionManage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/permissionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/permission_normal_title"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/permissionSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:text="@string/permission_normal_sub_title"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/permissionImage"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_folder_permission"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:gravity="bottom|center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/permissionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:text="@string/permission_below_11_normal_description"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/allowAccessButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif-medium"
            android:padding="15dp"
            android:text="@string/allow_access"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="30dp" />


        <TextView
            android:id="@+id/appSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/app_settings"
            android:textColor="@color/textGrey"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/howToAllowAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/how_to_allow_access"
            android:textColor="@color/linkColor"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>