<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Home">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="20sp" />


        <ImageView
            android:visibility="gone"
            android:id="@+id/searchImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/settingsImageView"
            android:contentDescription="@string/search_pdf"
            android:src="@drawable/ic_search"
            app:tint="@color/textColorSecondary" />

        <ImageView
            android:id="@+id/settingsImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"
            app:tint="@color/textColorSecondary" />


    </RelativeLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavView"
        android:layout_below="@id/toolbar" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="auto"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>