<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/jump_to_page"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/pageNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="(1 - 100)"
        android:textColor="@color/textColorSecondary"
        android:textSize="14sp" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="30dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/enter_page_number"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/textColor" />


    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/textGrey"
                android:textSize="15sp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/jump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/jump"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="20dp" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>