<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fileIcon"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_pdf_file" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/filePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/textGrey" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textColor="@color/textColor"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/date"
        android:textColor="@color/textColor"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_size"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/size"
        android:textColor="@color/textColor"
        android:textSize="16sp" />


</LinearLayout>